apps/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: homer
            defaultMode: 420
      containers:
        - name: homer
          image: b4bz/homer
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /www/assets
      restartPolicy: Always
