apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  labels:
    app: homer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: homer
  type: ClusterIP
